<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group_2"
                android:layout_marginTop="@dimen/layout_margin_top_5"
                android:contentDescription="@string/image_desc"/>


            <ImageView
                android:id="@+id/introPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/authentication"
                android:layout_marginTop="@dimen/layout_margin_top_10"
                android:contentDescription="@string/image_desc"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top_10"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/outline_2"
                android:hint="@string/tax_id"
                app:endIconMode="clear_text"
                app:endIconTint="@color/iconColor"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTaxId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top_20"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/outline_3"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/iconColor"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top_10"
                android:text="@string/forget_password"
                android:textColor="@color/textColor"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/layout_margin_top_20"
                android:elevation="10dp"
                android:background="@drawable/round_button_white"
                android:text="@string/login"
                android:textColor="@color/buttonTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top_50"
                android:text="@string/don_t_have_an_account_yet"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/goToSignUp"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/layout_margin_top_20"
                android:text="@string/register"
                android:textColor="@color/brown_text_color"
                android:background="@drawable/round_button_brown"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>