<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/layout_margin_top_60"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">



        <Button
            android:id="@+id/closeButton"
            android:layout_width="@dimen/button_width_close"
            android:layout_height="@dimen/button_height_close"
            android:background="@drawable/round_button_brown"
            android:textColor="@color/black"
            android:text="@string/back"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/introPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/authentication"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_desc"/>

        <TextView
            android:id="@+id/registerAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_as"
            android:textSize="20sp"
            android:textColor="@color/buttonTextColor"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introPic"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/optionsCard"
            android:layout_width="@dimen/card_view_width_popup"
            android:layout_height="@dimen/card_view_height_popup"
            app:cardCornerRadius="30dp"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerAs"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:layout_marginTop="@dimen/layout_margin_top_20"
                    android:textColor="@color/buttonTextColor"
                    android:textAllCaps="true"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxCompany"
                    android:layout_width="@dimen/check_box_width"
                    android:layout_height="@dimen/check_box_height"
                    android:layout_marginTop="@dimen/layout_margin_top_20"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/individual"
                    android:layout_marginTop="@dimen/layout_margin_top_20"
                    android:textColor="@color/buttonTextColor"
                    android:textAllCaps="true"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxIndividual"
                    android:layout_width="@dimen/check_box_width"
                    android:layout_height="@dimen/check_box_height"
                    android:layout_marginTop="@dimen/layout_margin_top_20"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/round_button_white"
            android:text="@string/next"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optionsCard"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/alreadyAUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_user"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/backToLogin"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/login"
            android:textColor="@color/brown_text_color"
            android:background="@drawable/round_button_brown"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alreadyAUser"
            app:layout_constraintBottom_toBottomOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

