<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/staticPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.1"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:text="@string/payment_successful"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_verified"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image_desc"/>

    <TextView
        android:id="@+id/staticReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_reference"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/dynamicReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/payment_reference"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/staticReference"
        app:layout_constraintTop_toBottomOf="@id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/dynamicUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/payment_reference"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/iconColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticReference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="@dimen/button_height_make_payment"
        android:background="@drawable/round_button_brown"
        android:text="@string/back"
        android:visibility="visible"
        android:textColor="@color/brown_text_color"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dynamicUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>