<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/buttonTextColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dashBoardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_payment"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/textSize_20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintStart_toEndOf="@id/notificationIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/image_desc"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/staticPayable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payable_amount"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/dynamicPayableAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="7,000"
        style="@style/TopTextViewDesign"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/staticPayable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/group_pay"
        app:layout_constraintVertical_bias="0.3"
        android:elevation="@dimen/layout_margin_top_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticPayable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image_desc"/>

    <TextView
        android:id="@+id/staticPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticPaymentMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/staticPayStack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paystack"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/staticPaymentMethod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/PaymentButton"
        android:layout_width="100dp"
        android:layout_height="@dimen/button_height_make_payment"
        android:background="@drawable/round_button_brown"
        android:text="@string/payment"
        android:visibility="invisible"
        android:textColor="@color/brown_text_color"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticPayStack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>