<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="150dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createAccounted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_created_successfully"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/teal_700"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/staticPayerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_tax_payer_id_is"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccounted"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/dynamicPayerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1234567"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="17sp"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintStart_toEndOf="@id/staticPayerID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccounted"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <TextView
                android:id="@+id/copyStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/staticPayerID"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/navToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:visibility="invisible"
                android:textColor="@color/teal_700"
                android:layout_marginTop="@dimen/layout_margin_top_10"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copyStatic"
                app:layout_constraintBottom_toBottomOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>